--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="normalize.css"/>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="left-contect.css" />
     <link rel="stylesheet" href="block_advantage.css" />
-    <link rel="stylesheet" href="normalize.css">
     <title>Prodaem kolesa</title>
   </head>
   <body>
@@ -16,12 +16,12 @@
       <article class="container">
         <div class="header_inner_first">
           <img class="header_logo" src="logo-color.png" alt="logo" />
-          <div class="header_inner">
-            <p>Франшиза</p>
-            <p>Калькулятор дохода</p>
-            <p>Открыть бизнес</p>
-          </div>
-          <button class="header_button"><p>Контакты</p></button>
+          <nav class="header_nav">
+            <a href="#" class="header_nav-link">Франшиза</a>
+            <a href="#" class="header_nav-link">Калькулятор дохода</a>
+            <a href="#" class="header_nav-link">Открыть бизнес</a>
+          </nav>
+          <button class="header_button">Контакты</button>
         </div>
       </article>
     </header>
