--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="left-contect.css" />
     <link rel="stylesheet" href="block_advantage.css" />
+    <link rel="stylesheet" href="var.css" />
     <title>Prodaem kolesa</title>
   </head>
   <body>
@@ -68,7 +69,7 @@
             </p>
           </div>
           <div class="block_advantage_block">
-            <img class="path_png" src="_Path_.png" />
+            <img class="path_png" src="_Path_.png"/>
             <h3>Комфорт и удобство</h3>
             <p>
               Быстрый подбор и получение товара на сайте и в магазине. Храним
