header button menu width 1050px

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="normalize.css"/>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="header.css" />
-    <link rel="stylesheet" href="left-contect.css" />
+    <link rel="stylesheet" href="header_form.css" />
     <link rel="stylesheet" href="block_advantage.css" />
     <link rel="stylesheet" href="var.css" />
     <title>Prodaem kolesa</title>
@@ -22,37 +22,38 @@
             <a href="#" class="header_nav-link">Открыть бизнес</a>
           </nav>
           <button class="header_button">Контакты</button>
-        </div>
+          <button class="header_button_menu">gf</button>
+          </div>
     </header>
     <!--header-->
-    <!--left_contect-->
-    <div class="left_contect">
+    <!--header_form-->
+    <div class="header_form">
       <article class="container">
-        <div class="left_contect_form1">
-          <h1 class="left_contect_name">Надёжно, просто, выгодно</h1>
-          <p class="left_contect_description">
+        <div class="header_form_form1">
+          <h1 class="header_form_name">Надёжно, просто, выгодно</h1>
+          <p class="header_form_description">
             Откройте свой шинный центр или пункт выдачи быстро и с минимальными
             затратами.
           </p>
         </div>
-        <div class="left_contect_form2">
-          <div class="left_contect_block1">
+        <div class="header_form_form2">
+          <div class="header_form_block1">
             <h3>от 50 тыс. ₽</h3>
             <p>размер инвестиций</p>
           </div>
-          <div class="left_contect_block2">
+          <div class="header_form_block2">
             <h3>от 36 м2</h3>
             <p>сервисная площадь</p>
           </div>
-          <div class="left_contect_block3">
+          <div class="header_form_block3">
             <h3>от 6 месяцев</h3>
             <p>окупаемость проекта</p>
           </div>
         </div>
-        <button class="left_contect_button">Оставить заявку</button>
+        <button class="header_form_button">Оставить заявку</button>
       </article>
     </div>
-    <!--left_contect-->
+    <!--header_form-->
     <!--block_advantage-->
     <div class="block_advantage">
       <div class="container">
