--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
     </header>
     <!--header-->
-    <!--header_form-->
+    <!--header_form (hero)-->
     <div class="header_form">
       <article class="container">
         <div class="header_form_form1">
