--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="normalize.css"/>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="header.css" />
-    <link rel="stylesheet" href="header_form.css" />
+    <link rel="stylesheet" href="hero_form.css" />
     <link rel="stylesheet" href="block_advantage.css" />
     <link rel="stylesheet" href="var.css" />
     <title>Prodaem kolesa</title>
@@ -27,30 +27,30 @@
     </header>
     <!--header-->
     <!--header_form (hero)-->
-    <div class="header_form">
+    <div class="hero_form">
       <article class="container">
-        <div class="header_form_form1">
-          <h1 class="header_form_name">Надёжно, просто, выгодно</h1>
-          <p class="header_form_description">
+        <div class="hero_form_form1">
+          <h1 class="hero_form_name">Надёжно, просто, выгодно</h1>
+          <p class="hero_form_description">
             Откройте свой шинный центр или пункт выдачи быстро и с минимальными
             затратами.
           </p>
         </div>
-        <div class="header_form_form2">
-          <div class="header_form_block1">
+        <div class="hero_form_form2">
+          <div class="hero_form_block1">
             <h3>от 50 тыс. ₽</h3>
             <p>размер инвестиций</p>
           </div>
-          <div class="header_form_block2">
+          <div class="hero_form_block2">
             <h3>от 36 м2</h3>
             <p>сервисная площадь</p>
           </div>
-          <div class="header_form_block3">
+          <div class="hero_form_block3">
             <h3>от 6 месяцев</h3>
             <p>окупаемость проекта</p>
           </div>
         </div>
-        <button class="header_form_button">Оставить заявку</button>
+        <button class="hero_form_button">Оставить заявку</button>
       </article>
     </div>
     <!--header_form-->
