--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
             <a href="#" class="header_nav-link">Открыть бизнес</a>
           </nav>
           <button class="header_button">Контакты</button>
-          <button class="header_button_menu">gf</button>
+          <button class="header_button_menu">
+          </button>
           </div>
     </header>
     <!--header-->
-    <!--header_form (hero)-->
+    <!--hero-->
     <div class="hero_form">
       <article class="container">
         <div class="hero_form_form1">
@@ -39,21 +40,21 @@
         <div class="hero_form_form2">
           <div class="hero_form_block1">
             <h3>от 50 тыс. ₽</h3>
-            <p>размер инвестиций</p>
+            <p>размер <br>инвестиций</p>
           </div>
           <div class="hero_form_block2">
             <h3>от 36 м2</h3>
-            <p>сервисная площадь</p>
+            <p>сервисная <br>площадь</p>
           </div>
           <div class="hero_form_block3">
             <h3>от 6 месяцев</h3>
-            <p>окупаемость проекта</p>
+            <p>окупаемость <br>проекта</p>
           </div>
         </div>
         <button class="hero_form_button">Оставить заявку</button>
       </article>
     </div>
-    <!--header_form-->
+    <!--hero-->
     <!--block_advantage-->
     <div class="block_advantage">
       <div class="container">
