--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
             <p>окупаемость <br>проекта</p>
           </div>
         </div>
+        <div class="hero_form_form2middle">
+          <p>—  от 50 тыс. ₽ размер инвестиций</p>
+          <p>—  от 36 м2 сервисная площадь</p>
+          <p>—  до 24 месяцев окупаемость проекта</p>
+          </div>
         <button class="hero_form_button">Оставить заявку</button>
       </article>
     </div>
