--- a/index.html
+++ b/index.html
@@ -66,48 +66,54 @@
         <h2 class="block_advantage_title">Преимущества</h2>
         <div class="block_advantage_table">
           <div class="block_advantage_block">
-            <img class="path_png" src="_Path_.png" />
-            <h3>Сила бренда</h3>
+            <img class="block_advantage_img1" src="_Path_.png">
+            <img class="block_advantage_img2" src="Vector.svg" />
+            <h3 class="block_advantage_h3">Сила бренда</h3>
             <p>
               Один из ведущих дистрибьюторов автошин, мотошин и колесных дисков
               в России
             </p>
           </div>
           <div class="block_advantage_block">
-            <img class="path_png" src="_Path_.png"/>
-            <h3>Комфорт и удобство</h3>
+              <img class="block_advantage_img1" src="_Path_.png">
+              <img class="block_advantage_img2" src="Group.svg" />
+            <h3 class="block_advantage_h3">Комфорт и удобство</h3>
             <p>
               Быстрый подбор и получение товара на сайте и в магазине. Храним
               шины и оказываем множество других услуг
             </p>
           </div>
           <div class="block_advantage_block">
-            <img class="path_png" src="_Path_.png" />
-            <h3>Консультация</h3>
+              <img class="block_advantage_img1" src="_Path_.png">
+              <img class="block_advantage_img2" src="Group1.svg" />
+            <h3 class="block_advantage_h3">Консультация</h3>
             <p>
               Собственный контакт-центр с круглосуточной квалифицированной
               консультацией
             </p>
           </div>
           <div class="block_advantage_block">
-            <img class="path_png" src="_Path_.png" />
-            <h3>Гарантия качества</h3>
+              <img class="block_advantage_img1" src="_Path_.png">
+              <img class="block_advantage_img2" src="Vector1.svg" />       
+            <h3 class="block_advantage_h3">Гарантия качества</h3>
             <p>
               Собственный учебный центр повышения квалификации сотрудников любой
               специализации
             </p>
           </div>
           <div class="block_advantage_block">
-            <img class="path_png" src="_Path_.png" />
-            <h3>Онлайн и рядом</h3>
+              <img class="block_advantage_img1" src="_Path_.png">
+              <img class="block_advantage_img2" src="Vector2.svg" />
+            <h3 class="block_advantage_h3">Онлайн и рядом</h3>
             <p>
               Огромный выбор товаров на сайте и в магазинах, подобранных по
               эффективной матрице
             </p>
           </div>
           <div class="block_advantage_block">
-            <img class="path_png" src="_Path_.png" />
-            <h3>Промоактивности</h3>
+              <img class="block_advantage_img1" src="_Path_.png">
+              <img class="block_advantage_img2" src="Group2.svg" />
+            <h3 class="block_advantage_h3">Промоактивности</h3>
             <p>
               Множество акций и конкурсов с призами на всех каналах продаж, а
               также программа лояльности для постоянных клиентов
