--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="hero_form.css" />
     <link rel="stylesheet" href="block_advantage.css" />
     <link rel="stylesheet" href="var.css" />
+    <link rel="stylesheet" href="block_forma.css" />
     <title>Prodaem kolesa</title>
   </head>
   <body>
@@ -124,5 +125,13 @@
       </div>
     </div>
     <!--block_advantage-->
+    <!--block_forma-->
+    <section class="block_forma">
+      <h2 class="block_forma_tittle">Выберите свой формат</h2>
+      <div class="checkbox">
+        <input class="switch" type="checkbox">
+        </div>
+    </section>
+    <!--block_forma-->
   </body>
 </html>
