--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@
     <!--block_advantage-->
     <!--block_forma-->
     <section class="block_forma">
+      <div class="container">
       <h2 class="block_forma_tittle">Выберите свой формат</h2>
       <div class="checkbox">
         <input class="switch" type="checkbox">
+        </div>
         </div>
     </section>
     <!--block_forma-->
