--- a/index.html
+++ b/index.html
@@ -67,17 +67,21 @@
         <h2 class="block_advantage_title">Преимущества</h2>
         <div class="block_advantage_table">
           <div class="block_advantage_block">
-            <img class="block_advantage_img1" src="_Path_.png">
-            <img class="block_advantage_img2" src="Vector.svg" />
-            <h3 class="block_advantage_h3">Сила бренда</h3>
+            <div class="icon-wrapper">
+            <img class="icon-wrapper_background" src="_Path_.png">
+            <img class="icon-wrapper_icon" src="Vector.svg" />
+            </div>
+            <h3>Сила бренда</h3>
             <p>
               Один из ведущих дистрибьюторов автошин, мотошин и колесных дисков
               в России
             </p>
           </div>
           <div class="block_advantage_block">
-              <img class="block_advantage_img1" src="_Path_.png">
-              <img class="block_advantage_img2" src="Group.svg" />
+            <div class="icon-wrapper">
+              <img class="icon-wrapper_background" src="_Path_.png">
+              <img class="icon-wrapper_icon" src="Group.svg" />
+              </div>
             <h3 class="block_advantage_h3">Комфорт и удобство</h3>
             <p>
               Быстрый подбор и получение товара на сайте и в магазине. Храним
@@ -85,8 +89,10 @@
             </p>
           </div>
           <div class="block_advantage_block">
-              <img class="block_advantage_img1" src="_Path_.png">
-              <img class="block_advantage_img2" src="Group1.svg" />
+            <div class="icon-wrapper">
+              <img class="icon-wrapper_background" src="_Path_.png">
+              <img class="icon-wrapper_icon" src="Group1.svg" />
+              </div>
             <h3 class="block_advantage_h3">Консультация</h3>
             <p>
               Собственный контакт-центр с круглосуточной квалифицированной
@@ -94,8 +100,10 @@
             </p>
           </div>
           <div class="block_advantage_block">
-              <img class="block_advantage_img1" src="_Path_.png">
-              <img class="block_advantage_img2" src="Vector1.svg" />       
+            <div class="icon-wrapper">
+              <img class="icon-wrapper_background" src="_Path_.png">
+              <img class="icon-wrapper_icon" src="Vector1.svg" /> 
+            </div>      
             <h3 class="block_advantage_h3">Гарантия качества</h3>
             <p>
               Собственный учебный центр повышения квалификации сотрудников любой
@@ -103,8 +111,10 @@
             </p>
           </div>
           <div class="block_advantage_block">
-              <img class="block_advantage_img1" src="_Path_.png">
-              <img class="block_advantage_img2" src="Vector2.svg" />
+            <div class="icon-wrapper">
+              <img class="icon-wrapper_background" src="_Path_.png">
+              <img class="icon-wrapper_icon" src="Vector2.svg" />
+              </div>
             <h3 class="block_advantage_h3">Онлайн и рядом</h3>
             <p>
               Огромный выбор товаров на сайте и в магазинах, подобранных по
@@ -112,8 +122,10 @@
             </p>
           </div>
           <div class="block_advantage_block">
-              <img class="block_advantage_img1" src="_Path_.png">
-              <img class="block_advantage_img2" src="Group2.svg" />
+            <div class="icon-wrapper">
+              <img class="icon-wrapper_background" src="_Path_.png">
+              <img class="icon-wrapper_icon" src="Group2.svg" />
+              </div>
             <h3 class="block_advantage_h3">Промоактивности</h3>
             <p>
               Множество акций и конкурсов с призами на всех каналах продаж, а
