--- a/index.html
+++ b/index.html
@@ -138,14 +138,20 @@
     </div>
     <!--block_advantage-->
     <!--block_forma-->
-    <section class="block_forma">
-      <div class="container">
-      <h2 class="block_forma_tittle">Выберите свой формат</h2>
-      <div class="checkbox">
-        <input class="switch" type="checkbox">
-        </div>
-        </div>
-    </section>
+    <div class="block_forma__name">
+      <h2>Выберите свой формат</h2>
+    <div class="block__forma">
+   <div class="toggle__content">
+    <label class="toggle_label">
+      <input type="checkbox" class="toggle__check" checked>
+      <div class="toggle__rail">
+        <span class="toggle__circle"></span>
+        <span class="toggle__border"></span>
+      </div>
+    </label>
+   </div>
+  </div>
+</div>
     <!--block_forma-->
   </body>
 </html>
