--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="normalize.css"/>
+    <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="hero_form.css" />
@@ -15,17 +15,16 @@
   <body>
     <!--header-->
     <header>
-        <div class="header_inner_first">
-          <img class="header_logo" src="logo-color.png" alt="logo" />
-          <nav class="header_nav">
-            <a href="#" class="header_nav-link">Франшиза</a>
-            <a href="#" class="header_nav-link">Калькулятор дохода</a>
-            <a href="#" class="header_nav-link">Открыть бизнес</a>
-          </nav>
-          <button class="header_button">Контакты</button>
-          <button class="header_button_menu">
-          </button>
-          </div>
+      <div class="header_inner_first">
+        <img class="header_logo" src="logo-color.png" alt="logo" />
+        <nav class="header_nav">
+          <a href="#" class="header_nav-link">Франшиза</a>
+          <a href="#" class="header_nav-link">Калькулятор дохода</a>
+          <a href="#" class="header_nav-link">Открыть бизнес</a>
+        </nav>
+        <button class="header_button">Контакты</button>
+        <button class="header_button_menu"></button>
+      </div>
     </header>
     <!--header-->
     <!--hero-->
@@ -41,22 +40,22 @@
         <div class="hero_form_form2">
           <div class="hero_form_block1">
             <h3>от 50 тыс. ₽</h3>
-            <p>размер <br>инвестиций</p>
+            <p>размер <br />инвестиций</p>
           </div>
           <div class="hero_form_block2">
             <h3>от 36 м2</h3>
-            <p>сервисная <br>площадь</p>
+            <p>сервисная <br />площадь</p>
           </div>
           <div class="hero_form_block3">
             <h3>от 6 месяцев</h3>
-            <p>окупаемость <br>проекта</p>
+            <p>окупаемость <br />проекта</p>
           </div>
         </div>
         <div class="hero_form_form2middle">
-          <p>—  от 50 тыс. ₽ размер инвестиций</p>
-          <p>—  от 36 м2 сервисная площадь</p>
-          <p>—  до 24 месяцев окупаемость проекта</p>
-          </div>
+          <p>— от 50 тыс. ₽ размер инвестиций</p>
+          <p>— от 36 м2 сервисная площадь</p>
+          <p>— до 24 месяцев окупаемость проекта</p>
+        </div>
         <button class="hero_form_button">Оставить заявку</button>
       </article>
     </div>
@@ -68,8 +67,8 @@
         <div class="block_advantage_table">
           <div class="block_advantage_block">
             <div class="icon-wrapper">
-            <img class="icon-wrapper_background" src="_Path_.png">
-            <img class="icon-wrapper_icon" src="Vector.svg" />
+              <img class="icon-wrapper_background" src="_Path_.png" />
+              <img class="icon-wrapper_icon" src="Vector.svg" />
             </div>
             <h3>Сила бренда</h3>
             <p>
@@ -79,9 +78,9 @@
           </div>
           <div class="block_advantage_block">
             <div class="icon-wrapper">
-              <img class="icon-wrapper_background" src="_Path_.png">
+              <img class="icon-wrapper_background" src="_Path_.png" />
               <img class="icon-wrapper_icon" src="Group.svg" />
-              </div>
+            </div>
             <h3 class="block_advantage_h3">Комфорт и удобство</h3>
             <p>
               Быстрый подбор и получение товара на сайте и в магазине. Храним
@@ -90,9 +89,9 @@
           </div>
           <div class="block_advantage_block">
             <div class="icon-wrapper">
-              <img class="icon-wrapper_background" src="_Path_.png">
+              <img class="icon-wrapper_background" src="_Path_.png" />
               <img class="icon-wrapper_icon" src="Group1.svg" />
-              </div>
+            </div>
             <h3 class="block_advantage_h3">Консультация</h3>
             <p>
               Собственный контакт-центр с круглосуточной квалифицированной
@@ -101,9 +100,9 @@
           </div>
           <div class="block_advantage_block">
             <div class="icon-wrapper">
-              <img class="icon-wrapper_background" src="_Path_.png">
-              <img class="icon-wrapper_icon" src="Vector1.svg" /> 
-            </div>      
+              <img class="icon-wrapper_background" src="_Path_.png" />
+              <img class="icon-wrapper_icon" src="Vector1.svg" />
+            </div>
             <h3 class="block_advantage_h3">Гарантия качества</h3>
             <p>
               Собственный учебный центр повышения квалификации сотрудников любой
@@ -112,9 +111,9 @@
           </div>
           <div class="block_advantage_block">
             <div class="icon-wrapper">
-              <img class="icon-wrapper_background" src="_Path_.png">
+              <img class="icon-wrapper_background" src="_Path_.png" />
               <img class="icon-wrapper_icon" src="Vector2.svg" />
-              </div>
+            </div>
             <h3 class="block_advantage_h3">Онлайн и рядом</h3>
             <p>
               Огромный выбор товаров на сайте и в магазинах, подобранных по
@@ -123,35 +122,45 @@
           </div>
           <div class="block_advantage_block">
             <div class="icon-wrapper">
-              <img class="icon-wrapper_background" src="_Path_.png">
+              <img class="icon-wrapper_background" src="_Path_.png" />
               <img class="icon-wrapper_icon" src="Group2.svg" />
-              </div>
+            </div>
             <h3 class="block_advantage_h3">Промоактивности</h3>
             <p>
               Множество акций и конкурсов с призами на всех каналах продаж, а
               также программа лояльности для постоянных клиентов
             </p>
           </div>
-          </div>
         </div>
       </div>
     </div>
     <!--block_advantage-->
     <!--block_forma-->
-    <div class="block_forma__name">
-      <h2>Выберите свой формат</h2>
-    <div class="block__forma">
-   <div class="toggle__content">
-    <label class="toggle_label">
-      <input type="checkbox" class="toggle__check" checked>
-      <div class="toggle__rail">
-        <span class="toggle__circle"></span>
-        <span class="toggle__border"></span>
+    <div class="container">
+      <div class="block_forma__title1">
+        <h2>Выберите свой формат</h2>
+        <div class="block__forma">
+          <div class="toggle__content">
+            <label class="toggle_label">
+              <input type="checkbox" class="toggle__check" checked />
+              <div class="toggle__rail">
+                <span class="toggle__circle"></span>
+                <span class="toggle__border"></span>
+              </div>
+            </label>
+          </div>
+        </div>
+        <div class="block_forma__menu">
+          <div class="block_forma_menu1">
+            <h4 class="block__forma_title4">Шинный центр</h4>
+            <h4 class="block__forma_title4">Пункт выдачи заказов</h4>
+          </div>
+          <div class="block_forma_menu2">
+            <h4 class="block__forma_title4">Ваш доход</h4>
+          </div>
+        </div>
       </div>
-    </label>
-   </div>
-  </div>
-</div>
+    </div>
     <!--block_forma-->
   </body>
 </html>
