forma menu button

--- a/index.html
+++ b/index.html
@@ -150,11 +150,12 @@
             </label>
           </div>
         </div>
-        <div class="block_forma__menu">
+        <div class="block__forma_menu">
           <div class="block_forma_menu1">
-            <h4 class="block__forma_title4">Шинный центр</h4>
-            <h4 class="block__forma_title4">Пункт выдачи заказов</h4>
+            <button class="block_forma_button">Шинный центр</button>
+            <button class="block_forma_button">Пункт выдачи заказов</button>
           </div>
+          <p></p>
           <div class="block_forma_menu2">
             <h4 class="block__forma_title4">Ваш доход</h4>
           </div>
