block forma menu flex

--- a/index.html
+++ b/index.html
@@ -152,10 +152,16 @@
         </div>
         <div class="block__forma_menu">
           <div class="block_forma_menu1">
-            <button class="block_forma_button">Шинный центр</button>
-            <button class="block_forma_button">Пункт выдачи заказов</button>
+            <div class="block_forma_buttons">
+              <button class="block_forma_button">Шинный центр</button>
+              <button class="block_forma_button">Пункт выдачи заказов</button>
+            </div>
+            <p>
+              Владельцам шинных центров<br />Обновим ваш центр в фирменном стиле
+              «Колеса Даром». Центр включает в себя склад для<br />
+              хранения, пост сервисного обслуживания и торговый зал.
+            </p>
           </div>
-          <p></p>
           <div class="block_forma_menu2">
             <h4 class="block__forma_title4">Ваш доход</h4>
           </div>
