--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
               «Колеса Даром». Центр включает в себя склад для<br />
               хранения, пост сервисного обслуживания и торговый зал.
             </p>
+            <div class="block_forma_menu1_price">
+              <h4 class="block__forma_title4">от 200 тыс. ₽</h4>
+              <h4 class="block__forma_title4">130 тыс. ₽</h4>
+              <h4 class="block__forma_title4">2,5 тыс. ₽</h4>
+              <h4 class="block__forma_title4">от 50 м2</h4>
+            </div>
           </div>
           <div class="block_forma_menu2">
             <h4 class="block__forma_title4">Ваш доход</h4>
