--- a/index.html
+++ b/index.html
@@ -162,10 +162,22 @@
               хранения, пост сервисного обслуживания и торговый зал.
             </p>
             <div class="block_forma_menu1_price">
-              <h4 class="block__forma_title4">от 200 тыс. ₽</h4>
-              <h4 class="block__forma_title4">130 тыс. ₽</h4>
-              <h4 class="block__forma_title4">2,5 тыс. ₽</h4>
-              <h4 class="block__forma_title4">от 50 м2</h4>
+              <div class="block_forma_menu1_price_description">
+                <h4 class="block__forma_title4">от 200 тыс. ₽</h4>
+                <p>Размер инвестиций</p>
+              </div>
+              <div class="block_forma_menu1_price_description">
+                <h4 class="block__forma_title4">130 тыс. ₽</h4>
+                <p>Паушальный взнос</p>
+              </div>
+              <div class="block_forma_menu1_price_description">
+                <h4 class="block__forma_title4">2,5 тыс. ₽</h4>
+                <p>Роялти</p>
+              </div>
+              <div class="block_forma_menu1_price_description">
+                <h4 class="block__forma_title4">от 50 м2</h4>
+                <p>Площадь помещения</p>
+              </div>
             </div>
           </div>
           <div class="block_forma_menu2">
