--- a/index.html
+++ b/index.html
@@ -176,7 +176,23 @@
               </div>
               <div class="block_forma_menu1_price_description">
                 <h4 class="block__forma_title4">от 50 м2</h4>
-                <p>Площадь помещения</p>
+                <p>
+                  Площадь<br />
+                  помещения
+                </p>
+              </div>
+            </div>
+            <div class="block_forma_menu_content">
+              <h4 class="block__forma_title4">В пакет включено</h4>
+              <div class="block_forma_content_description">
+                <p class="block_forma_content">Дизан проект</p>
+                <p class="block_forma_content">Обучение</p>
+                <p class="block_forma_content">Продвижение</p>
+                <p class="block_forma_content">IT-инфраструктура</p>
+                <p class="block_forma_content">Call-центр</p>
+                <p class="block_forma_content">Стандарты работы</p>
+                <p class="block_forma_content">Персональный менеджер</p>
+                <p class="block_forma_content">Оптовые цены</p>
               </div>
             </div>
           </div>
