--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
                 <p class="block_forma_content">Оптовые цены</p>
               </div>
             </div>
+            <div class="block_forma_content1">
+              <p>Фотогалерея</p>
+              <p>Калькулятор дохода</p>
+            </div>
           </div>
           <div class="block_forma_menu2">
             <h4 class="block__forma_title4">Ваш доход</h4>
