--- a/index.html
+++ b/index.html
@@ -201,7 +201,11 @@
             </div>
           </div>
           <div class="block_forma_menu2">
-            <h4 class="block__forma_title4">Ваш доход</h4>
+            <div class="block_forma_title_income">
+              <h4 class="block__forma_title4">Ваш доход</h4>
+            </div>
+            <p>2 500 000 ₽</p>
+            </div>
           </div>
         </div>
       </div>
