--- a/index.html
+++ b/index.html
@@ -15,51 +15,58 @@
   <body>
     <!--header-->
     <header>
-      <div class="header_inner_first">
-        <img class="header_logo" src="logo-color.png" alt="logo" />
-        <nav class="header_nav">
-          <a href="#" class="header_nav-link">Франшиза</a>
-          <a href="#" class="header_nav-link">Калькулятор дохода</a>
-          <a href="#" class="header_nav-link">Открыть бизнес</a>
+      <div class="header" href="/">
+        <img class="header-logo" 
+        src="logo.png" 
+        alt="Logo"
+        class="header-logo-image" 
+        />
+        <nav class="header-menu-list">
+          <a href="#" class="header-menu-link">Франшиза</a>
+          <a href="#" class="header-menu-link">Калькулятор дохода</a>
+          <a href="#" class="header-menu-link">Открыть бизнес</a>
         </nav>
-        <button class="header_button">Контакты</button>
-        <button class="header_button_menu"></button>
+        <button class="header-button">
+          Контакты
+        </button>
+        <button class="header-button-menu">
+        </button>
       </div>
     </header>
     <!--header-->
-    <!--hero-->
-    <div class="hero_form">
+    <!--bid-->
+    <div class="bid">
       <article class="container">
-        <div class="hero_form_form1">
-          <h1 class="hero_form_name">Надёжно, просто, выгодно</h1>
-          <p class="hero_form_description">
+        <div class="bid-form1">
+          <h1 class="bid-title">Надёжно, просто, выгодно</h1>
+          <p class="bid-description">
             Откройте свой шинный центр или пункт выдачи быстро и с минимальными
             затратами.
           </p>
         </div>
-        <div class="hero_form_form2">
-          <div class="hero_form_block1">
+        <ul class="bid-forma-list">
+          <li>
             <h3>от 50 тыс. ₽</h3>
             <p>размер <br />инвестиций</p>
-          </div>
-          <div class="hero_form_block2">
+          </li>
+          <li>
             <h3>от 36 м2</h3>
             <p>сервисная <br />площадь</p>
-          </div>
-          <div class="hero_form_block3">
+          </li>
+          <li>
             <h3>от 6 месяцев</h3>
             <p>окупаемость <br />проекта</p>
-          </div>
-        </div>
-        <div class="hero_form_form2middle">
+          </li>
+        </ul>
+        <div class="bid-forma-list-middle">
           <p>— от 50 тыс. ₽ размер инвестиций</p>
           <p>— от 36 м2 сервисная площадь</p>
           <p>— до 24 месяцев окупаемость проекта</p>
         </div>
-        <button class="hero_form_button">Оставить заявку</button>
+        <button class="bid-button">Оставить заявку</button>
       </article>
     </div>
-    <!--hero-->
+    <!--bid-->
     <!--block_advantage-->
     <div class="block_advantage">
       <div class="container">
