--- a/index.html
+++ b/index.html
@@ -68,14 +68,20 @@
     </div>
     <!--bid-->
     <!--block_advantage-->
-    <div class="block_advantage">
+    <div class="block-advantage">
       <div class="container">
-        <h2 class="block_advantage_title">Преимущества</h2>
-        <div class="block_advantage_table">
-          <div class="block_advantage_block">
-            <div class="icon-wrapper">
-              <img class="icon-wrapper_background" src="_Path_.png" />
-              <img class="icon-wrapper_icon" src="Vector.svg" />
+        <h2 class="block-advantage-title">
+          Преимущества
+        </h2>
+        <div class="block-advantage-map">
+          <div class="block-advantage-card">
+            <div class="block-advantage-card-icon">
+              <img class="block-advantage-card-icon-background" 
+              src="_Path_.png" 
+              />
+              <img class="block-advantage-card-icon-home" 
+              src="Vector.svg" 
+              />
             </div>
             <h3>Сила бренда</h3>
             <p>
@@ -83,56 +89,86 @@
               в России
             </p>
           </div>
-          <div class="block_advantage_block">
-            <div class="icon-wrapper">
-              <img class="icon-wrapper_background" src="_Path_.png" />
-              <img class="icon-wrapper_icon" src="Group.svg" />
+          <div class="block-advantage-card">
+            <div class="block-advantage-card-icon">
+              <img class="block-advantage-card-icon-background" 
+              src="_Path_.png" 
+              />
+              <img class="block-advantage-card-icon-home" 
+              src="Group.svg" 
+              />
             </div>
-            <h3 class="block_advantage_h3">Комфорт и удобство</h3>
+            <h3>
+              Комфорт и удобство
+            </h3>
             <p>
               Быстрый подбор и получение товара на сайте и в магазине. Храним
               шины и оказываем множество других услуг
             </p>
           </div>
-          <div class="block_advantage_block">
-            <div class="icon-wrapper">
-              <img class="icon-wrapper_background" src="_Path_.png" />
-              <img class="icon-wrapper_icon" src="Group1.svg" />
+          <div class="block-advantage-card">
+            <div class="block-advantage-card-icon">
+              <img class="block-advantage-card-icon-background" 
+              src="_Path_.png" 
+              />
+              <img class="block-advantage-card-icon-home" 
+              src="Group1.svg" 
+              />
             </div>
-            <h3 class="block_advantage_h3">Консультация</h3>
+            <h3>
+              Консультация
+            </h3>
             <p>
               Собственный контакт-центр с круглосуточной квалифицированной
               консультацией
             </p>
           </div>
-          <div class="block_advantage_block">
-            <div class="icon-wrapper">
-              <img class="icon-wrapper_background" src="_Path_.png" />
-              <img class="icon-wrapper_icon" src="Vector1.svg" />
+          <div class="block-advantage-card">
+            <div class="block-advantage-card-icon">
+              <img class="block-advantage-card-icon-background" 
+              src="_Path_.png" 
+              />
+              <img class="block-advantage-card-icon-home" 
+              src="Vector1.svg" 
+              />
             </div>
-            <h3 class="block_advantage_h3">Гарантия качества</h3>
+            <h3>
+              Гарантия качества
+            </h3>
             <p>
               Собственный учебный центр повышения квалификации сотрудников любой
               специализации
             </p>
           </div>
-          <div class="block_advantage_block">
-            <div class="icon-wrapper">
-              <img class="icon-wrapper_background" src="_Path_.png" />
-              <img class="icon-wrapper_icon" src="Vector2.svg" />
+          <div class="block-advantage-card">
+            <div class="block-advantage-card-icon">
+              <img class="block-advantage-card-icon-background" 
+              src="_Path_.png" 
+              />
+              <img class="block-advantage-card-icon-home" 
+              src="Vector2.svg" 
+              />
             </div>
-            <h3 class="block_advantage_h3">Онлайн и рядом</h3>
+            <h3>
+              Онлайн и рядом
+            </h3>
             <p>
               Огромный выбор товаров на сайте и в магазинах, подобранных по
               эффективной матрице
             </p>
           </div>
-          <div class="block_advantage_block">
-            <div class="icon-wrapper">
-              <img class="icon-wrapper_background" src="_Path_.png" />
-              <img class="icon-wrapper_icon" src="Group2.svg" />
+          <div class="block-advantage-card">
+            <div class="block-advantage-card-icon">
+              <img class="block-advantage-card-icon-background" 
+              src="_Path_.png" 
+              />
+              <img class="block-advantage-card-icon-home" 
+              src="Group2.svg" 
+              />
             </div>
-            <h3 class="block_advantage_h3">Промоактивности</h3>
+            <h3>
+              Промоактивности
+            </h3>
             <p>
               Множество акций и конкурсов с призами на всех каналах продаж, а
               также программа лояльности для постоянных клиентов
